tests/reject/tab_mix2.ty
# Mixed indentation (tab then space) in one line -- must be rejected.
fn main():
	 println("mixed")
